--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -89,7 +89,7 @@
                         <li><a href="./membership.html">Products</a></li>
                         <li><a href="./news.html">Blog</a></li>
                         <li><a href="./starter-page.html">Specials</a></li>
-                        <li><a href="./welcome.html">Contact</a></li>
+                        <li><a href="https://atvhfs.com">Contact</a></li>
                     </ul>
                 </nav>
             </div><!-- col-12 -->
