--- a/gallery-page- validated.html
+++ b/gallery-page- validated.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!-- meta details go here -->
     <title>Complete Gallery page</title>
-    <mxreta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-9639638377144073">
     <meta property="og:title" content="A Basic HTML5 Template">
