--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -45,11 +45,11 @@ validated.html)
 </head>
 
 <body>
-    <header>
+    <header class="data" id="gallery-one-colheader">
         <h1>A full page roll-over gallery of greetings cards</h1>
         <h2>Hover the mouse over a small picture to see an enlarged version</h2>
     </header>
-    <nav>
+    <nav class="data" id="gallery-one-colnav">
         <ul>
             <li class="btn"><a href="gallery-one-col.html">One-col-Gallery</a></li>
             <li class="btn"><a href="gallery-2col.html">Two-col-Gallery</a></li>
@@ -57,7 +57,7 @@ validated.html)
             <li class="btn"><a href="gallery-page-validated.html">Home Page Gallery</a></li>
         </ul>
     </nav>
-    <div id="rightcol">
+    <div class="data" id="gallery-one-col">
         StarTrackr<br><br>
         <p><a href="http://validator.w3.org/check?uri=referer">
                 <img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64"
