--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -20,7 +20,7 @@ validated.html)
     <meta name="keywords" content="HTML5, Node.js, Jquery">
     <meta name="author" content="Orris Baker">
     <meta property="og:audio:type" content="audio/mpeg">
-    <link rel="stylesheet" href="CSS/gallery-page-HTML5.css" type="text/css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="CSS/gallery-one-col.css" type="text/css" media="screen" charset="utf-8">
     <link rel="icon" type="image/png" href="./flexy-logo.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <link rel="icon" type="image/png" href="./flexy-logo.png">
