--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -9,6 +9,10 @@ validated.html)
 <head>
     <meta http-equiv="Content-Type" content="text/html" ; charset="utf-8">
     <title>Complete Gallery page</title>
+	<link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8">
+    <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="script.js"></script>
+	
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-9639638377144073">
