--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -10,8 +10,8 @@ validated.html)
     <meta http-equiv="Content-Type" content="text/html" ; charset="utf-8">
     <title>Complete Gallery page</title>
 	<link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8">
-    <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-    <script type="text/javascript" src="script.js"></script>
+    <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="scripts.js"></script>
 	
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
