--- a/gallery-2col.html
+++ b/gallery-2col.html
@@ -12,6 +12,11 @@
     <!-- head section is communicating about the page to the browser -->
     <!-- Anything you write under head is not displayed on the browser content page. -->
     <title>Page Two <!-- Two column rollover Gallery --></title>
+    <link rel="stylesheet" href="CSS/gallery-2col.css" type="text/css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8">
+    <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="scripts.js"></script>
+	
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-9639638377144073">
@@ -23,10 +28,9 @@
     <meta name="keywords" content="HTML5, Node.js, Jquery">
     <meta name="author" content="Orris Baker">
     <meta property="og:audio:type" content="audio/mpeg">
-    <link rel="stylesheet" href="CSS/gallery-2col.css" type="text/css" media="screen" charset="utf-8">
-    <link rel="icon" type="image/png" href="./flexy- logo.png">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    
     <link rel="icon" type="image/png" href="./flexy-logo.png">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
