--- a/gallery-2col.html
+++ b/gallery-2col.html
@@ -1,17 +1,13 @@
-<!DOCTYPE html>
-<!--Everything you write should be using markups -->
-<!-- head section is communicating about the page to the browser -->
-<!-- Anything you write under head is not displayed on the browser content page. -->
-<html xmlns="http://www.w3.org/1999/xhtml" xml:ng-app lang="en">
-<!-- All the Tags should be under <html> -->
-<!-- Describing about the page -->
+<!--
+Listing 2-6a. Creating a Three Column Rollover Gallery with HTML5 Validation Logo (gallery-page-
+validated.html)
+-->
 
+<!doctype html>
+<html ng-app lang="en">
 <head>
-    <!-- Required meta tags -->
-    <!-- Describing about the page -->
-    <!-- head section is communicating about the page to the browser -->
-    <!-- Anything you write under head is not displayed on the browser content page. -->
-    <title>Page Two <!-- Two column rollover Gallery --></title>
+    <meta http-equiv="Content-Type" content="text/html"; charset="utf-8">
+    <title>Two column rollover Gallery</title>
     <link rel="stylesheet" href="CSS/gallery-2col.css" type="text/css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8">
     <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
