--- a/gallery-2col.html
+++ b/gallery-2col.html
@@ -48,11 +48,11 @@ validated.html)
 </head>
 
 <body>
-    <header class="data" id="gallery-one-colheader">
+    <header class="data" id="2colheader">
         <h1>A full page roll-over gallery of greetings cards</h1>
         <h2>Hover the mouse over a small picture to see an enlarged version</h2>
     </header>
-    <nav class="data" id="gallery-one-colnav">
+    <nav class="data" id="2colnav">
         <ul>
             <li class="btn"><a href="gallery-one-col.html">One-col-Gallery</a></li>
             <li class="btn"><a href="gallery-2col.html">Two-col-Gallery</a></li>
