--- a/gallery-2col.html
+++ b/gallery-2col.html
@@ -60,7 +60,7 @@ validated.html)
             <li class="btn"><a href="gallery-page-validated.html">Home Page Gallery</a></li>
         </ul>
     </nav>
-    <div class="data" id="gallery-one-colrightcol">
+    <div class="data" id="2colrightcol">
         StarTrackr<br><br>
         <p><a href="http://validator.w3.org/check?uri=referer">
                 <img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64"
