--- a/gallery-2col.html
+++ b/gallery-2col.html
@@ -74,7 +74,7 @@ validated.html)
         <br class="clear">
         <p class="advert">Web Design by Orris Baker</p>
     </div>
-    <div class="data" id="gallery-one-colmidcol">
+    <div class="data" id="2colmidcol">
         <div class="data" id="gallery-one-colgallery-block">
             <ul id="col-1">
                 <li><a hre="#"><img src="images/alithumb.jpg" alt="Ali" title="Ali"><img class="hid"
