--- a/gallery-2col.html
+++ b/gallery-2col.html
@@ -75,7 +75,7 @@ validated.html)
         <p class="advert">Web Design by Orris Baker</p>
     </div>
     <div class="data" id="2colmidcol">
-        <div class="data" id="gallery-one-colgallery-block">
+        <div class="data" id="2colgallery-block">
             <ul id="col-1">
                 <li><a hre="#"><img src="images/alithumb.jpg" alt="Ali" title="Ali"><img class="hid"
                             src="images/alibig.jpg" alt=""></a></li>
