--- a/background-ex7-transp.html
+++ b/background-ex7-transp.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <title>Page with transparency and gradient background.</title>
+    <link rel="stylesheet" href="CSS/base.css" type="text/css" media="screen" charset="utf-8" />
+    <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="script.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-9639638377144073">
@@ -14,7 +16,6 @@
     <meta name="keywords" content="HTML5, Node.js, Jquery">
     <meta name="author" content="Orris Baker">
     <meta property="og:audio:type" content="audio/mpeg">
-
     <link rel="stylesheet" href="CSS/transparent.css" type="text/css" media="screen" charset="utf-8">
     <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
@@ -27,31 +28,19 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script type="text/javascript" src="/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
-
-    <!-- <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet"> -->
     <script src rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <!-- <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css"> -->
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./style[1].css">
-    
     <link rel="stylesheet" href="./nav[1].css">
-    <!--
-    <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
-    <!--
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-
-    <link rel="stylesheet" href="./font-awesome.min[1].css">
-    -->
     <link rel="icon" type="image/png" href="./weed.jpg">
     <link rel="icon" type="image/png" href="./flexy-logo.png">
     <link rel=”stylesheet” href=”https://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css”>
-    <!-- Font Awesome Icons --
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <!-- Font Awesome Icons -->
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic'
+        rel='stylesheet' type='text/css'>
     <!-- Plugin CSS --
-    <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
     <!--Add conditional Javascript-->
     <!-- Favicon-->
     <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
@@ -87,7 +76,7 @@
                     </ul>
                 </nav>
             </div><!-- col-12 -->
-        </div><!-- end-.row -->       
+        </div><!-- end-.row -->
         <header>
             <h1>Tourorris&#39;s Rural Retreats</h1>
             <img id="rosette" alt="Rosette" title="Rosette" height="127" src="images/rosette-128.png" width="128">
@@ -760,7 +749,7 @@ http://join.zoompanel.com/zoompanel/?master_id=153&subsource_id=111111111&cmp=AF
                 <a href="https://orris0.github.io/orris0/membership.html"
                     class="back-to-top d-flex align-items-center justify-content-center"><i
                         class="bi bi-arrow-up-short"></i></a>
-            </div>
+    </div>
 </body><!-- end body  -->
 
 
