--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -12,7 +12,6 @@ validated.html)
     <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8">
     <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="scripts.js"></script>
-	
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-9639638377144073">
@@ -24,7 +23,6 @@ validated.html)
     <meta name="keywords" content="HTML5, Node.js, Jquery">
     <meta name="author" content="Orris Baker">
     <meta property="og:audio:type" content="audio/mpeg">
-    
     <link rel="icon" type="image/png" href="./flexy-logo.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <!-- Google Fonts -->
@@ -62,13 +60,11 @@ validated.html)
     </nav>
     <div class="data" id="gallery-one-colrightcol">
         StarTrackr<br><br>
-        <p><a href="http://validator.w3.org/check?uri=referer">
-                <img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64"
-                    alt="Validated HTML5" title="Validated HTML5"></a>
+        <p>
+            <a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5"></a>
         </p>
         <p>
-            <a href="http://jigsaw.w3.org/css-validator/"><img src="images/vcss-blue.gif" width="88" height="31"
-                    title="Valid CSS!" alt="Valid CSS!"></a>
+            <a href="http://jigsaw.w3.org/css-validator/"><img src="images/vcss-blue.gif" width="88" height="31" title="Valid CSS!" alt="Valid CSS!"></a>
             <span class="small"><br><br>Markup Validated by the World Wide Web Consortium</span>
         </p>
         <br class="clear">
