--- a/gallery-2col.html
+++ b/gallery-2col.html
@@ -66,7 +66,7 @@
         <p class="advert">Web Design by Orris Baker</p>
     </div>
     <div class="data" id="twocolmidcol">
-        <div class="data" id="gallery-one-colgallery-block">
+        <div class="data" id="twocolgallery-block">
             <ul id="col-1">
                 <li><a hre="#"><img src="images/alithumb.jpg" alt="Ali" title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/catthumb.jpg" alt="Cat" title="Cat"><img class="hid" src="images/catbig.jpg" alt=""></a></li>
