--- a/gallery-2col.html
+++ b/gallery-2col.html
@@ -262,24 +262,24 @@ validated.html)
     
     <link rel="icon" type="image/png" href="./flexy-logo.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <!-- Google Fonts -->
+    <!-- Google Fonts --
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
-    <!-- Favicon-->
+    <!-- Favicon--
     <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
     <link rel="alternate" type="application/pdf" href="MainPage.pdf">
     <link rel="author" href="mailto:bakerorris0@gmail.comcom">
-    <!-- Bootstrap Icons-->
+    <!-- Bootstrap Icons--
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- SimpleLightbox plugin CSS-->
+    <!-- SimpleLightbox plugin CSS--
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet">
-    <!-- Core theme CSS (includes Bootstrap)-->
+    <!-- Core theme CSS (includes Bootstrap)--
     <link rel="stylesheet" href="https://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--conditional Javascript added-->
     <!--[if lte IE 8]>
         <script src="html5.js"></script>
-    <![endif]-->
+    <![endif]--
 </head>
 
 <body>
@@ -329,11 +329,11 @@ validated.html)
                     <li><a href="#"><img src="images/ancientthumb.jpg" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="images/ancientbig.jpg" alt=""></a></li>
                     <li><a href="#"><img src="images/felixthumb.jpg" alt="Felix" title="Felix"><img class="hid" src="images/felixbig.jpg" alt=""></a></li>
                     <li><a href="#"><img src="images/cliffthumb.jpg" alt="Cliffs" title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
-                    CHAPTER 2 ■ A ROLLOVER PICTURE GALLERY 51 -->
+                    CHAPTER 2 ■ A ROLLOVER PICTURE GALLERY 51 --
             </ul>
             <br class="clear">
-        </div><!--gallery block closed-->
-    </div><!--midcol closed-->
+        </div><!--gallery block closed--
+    </div><!--midcol closed--
     <footer class="data" id="2colfooter">
             <div class="footer-inner">
                 <div class="company-details">
@@ -440,8 +440,8 @@ validated.html)
 
                         </div>
                     </div>
-                </div><!-- end col-12 -->
-            </div><!-- end .row -->
+                </div><!-- end col-12 --
+            </div><!-- end .row --
     
             <div id="footer">
                 <p>
@@ -480,7 +480,7 @@ validated.html)
                 </div>
         </footer>
         <a href="https://orris0.github.io/orris0/gallery-page-validated.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-    </body><!-- end body  -->
+    </body><!-- end body  --
 </html>
     <!-- <header class="data" id="2colheader">
         <h1>A full page roll-over gallery of greetings cards</h1>
