--- a/gallery-2col.html
+++ b/gallery-2col.html
@@ -63,7 +63,7 @@
             <span class="small"><br><br>Markup Validated by the World Wide Web Consortium</span>
         </p>
         <br class="clear">
-        <p class="advert">Web Design by Orris Baker</p>
+        <p class="advert">Web Design by<br> Orris Baker</p>
     </div>
     <div class="data" id="twocolmidcol">
         <div class="data" id="twocolgallery-block">
