--- a/starter-page.html
+++ b/starter-page.html
@@ -17,11 +17,9 @@
     <meta name="author" content="Orris Baker">
     <meta property="og:audio:type" content="audio/mpeg">
     <link rel="stylesheet" type="text/css" href="horiz-vert-menu.css">
-
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic'
-        rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
     <!--Add conditional Javascript-->
     <!--[if lte IE 8]>
 		    <script src="html5.js"></script>
