--- a/starter-page.html
+++ b/starter-page.html
@@ -118,7 +118,7 @@
         </div> 
     </div>
     <br class="clear">    
-    -->     </div><!--content closed-->
+    -->   <!--  </div>content closed-->
             <footer class="data" id="html5style2footer">
                 <div class="footer-inner">
                     <div class="company-details">
@@ -719,7 +719,8 @@ http://join.zoompanel.com/zoompanel/?master_id=153&subsource_id=111111111&cmp=AF
                 <div class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
                     <p>&copy; Kite-It.</p>
                 </div>
-            </footer>
+                </footer>
+            </div><!--content closed-->
             <script src="lib/jquery-1.8.17.custom.min.js" type="text/javascript"></script>
 
             <!-- Vendor JS Files -->
