--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <link rel="stylesheet" href="CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8" /> -->
         <!-- lightbox -->
         <link rel="stylesheet" href="CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
-		<link rel="stylesheet" href="CSS/transparent.css" type="text/css" media="screen" charset="utf-8">
+		<!-- <link rel="stylesheet" href="CSS/transparent.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8" />
@@ -57,7 +57,7 @@
         <link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
         <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
 		
-        <-- Viewport for responsive web design -->
+     Viewport for responsive web design -->
         <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
         <!-- All JavaScript at the bottom, except this Modernizr build.
         Modernizr enables HTML5 elements & feature detects for optimal performance.
