--- a/starter-page.html
+++ b/starter-page.html
@@ -81,7 +81,7 @@
                 </div>
                 <br class="clear">
             
-                <!--side menu column starts-->
+                <!--side menu column starts--
                 <nav>
                     <ul>
                         <li><a href="about.html" title="About us">About Us</a></li>
