--- a/starter-page.html
+++ b/starter-page.html
@@ -4,8 +4,9 @@
 <head>
     <title>Contact page for the parish of Southbury, Devon</title>
     <link rel="stylesheet" type="text/css" href="horiz-vert-menu.css">
-    <script type="text/javascript" src="jquery-1.7.1.min.js"></script>
-    <script type="text/javascript" src="scripts.js"></script>
+    <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
+    <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="script.js"></script> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-9639638377144073">
