--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="CSS/transparent.css" type="text/css" media="screen" charset="utf-8"> 
     <link rel="stylesheet" type="text/css" href="CSS/HTML5-style-2.css">
     <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-    <script type="text/javascript" src="js/scripts.js"></script>
+    <script type="text/javascript" src=" scripts.js"></script>
     <script src="js/jquery.mobile-1.0.1.min.js"></script>
     <script type="text/javascript" src="assets/js/ui.js"></script>
     <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
