--- a/starter-page.html
+++ b/starter-page.html
@@ -4,7 +4,7 @@
 <head>
     <title>Contact page for the parish of Southbury, Devon</title>
     <link rel="stylesheet" type="text/css" href="horiz-vert-menu.css">
-    <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="CSS/base.css" type="text/css" media="screen" charset="utf-8" />
     <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="script.js"></script> 
     <meta charset="UTF-8">
