--- a/starter-page.html
+++ b/starter-page.html
@@ -29,10 +29,10 @@
 
 <body>
     <a id="top"></a>
-    <div id="container">
+    <div class="data" id="container">
         <div class="row">
             <div class="col-12">
-                <nav role="navigation" id="nav">
+                <nav role="navigation"id="nav">
                     <input class="trigger" type="checkbox" id="mainNavButton">
                     <label for="mainNavButton" onclick>Menu</label>
                     <ul>
