--- a/starter-page.html
+++ b/starter-page.html
@@ -26,13 +26,12 @@
 		    <script src="html5.js"></script>
         <![endif]-->
 </head>
-
 <body>
     <a id="top"></a>
     <div class="data" id="container">
         <div class="row">
             <div class="col-12">
-                <nav role="navigation"id="nav">
+                <nav role="navigation" class="data" id="nav">
                     <input class="trigger" type="checkbox" id="mainNavButton">
                     <label for="mainNavButton" onclick>Menu</label>
                     <ul>
@@ -46,10 +45,10 @@
                 </nav>
             </div><!-- col-12 -->
         </div><!-- end-.row -->
-        <header>
-            <h1>Tourorris&#39;s Rural Retreats</h1>
+        <header class="data" id="starter-page-header">
+            <h1 class="data" id="starter-page-h1">Tourorris&#39;s Rural Retreats</h1>
         </header>
-        <div id="hnav">
+        <div class="data" id="starter-page-hnav">
             <ul>
                 <li><a title="Southbury Church Services" href="services.html">Services</a></li>
                 <li><a title="What's On" href="index.html">What&#39;s On</a></li>
@@ -57,15 +56,15 @@
             </ul>
         </div>
         <br class="clear" /><br>
-        <div id="main-content"><br>
-            <div id="content">
-                <h2>Award winning accommodation, self catering or bed and breakfast</h2>
-                <div id="leftcol">
-                    <h3>Cottages, converted barns, caravans</h3>
+        <div class="data" id="starter-page-main-content"><br>
+            <div class="data" id="starter-page-content">
+                <h2 class="data" id="starter-page-h2">Award winning accommodation, self catering or bed and breakfast</h2>
+                <div class="data" id="starter-page-leftcol">
+                    <h3 class="data" id="starter-page-h3">Cottages, converted barns, caravans</h3>
                     <img alt="cottage interior" height="225" src="images/cotdining300.jpg" width="300"><br>The superb interior of one of our cottages
                 </div>
-                <div id="rightcol">
-                    <nav>
+                <div class="data" id="starter-page-rightcol">
+                    <nav class="data" id="starter-page-nav">
                         <ul>
                             <li><a href="background-ex7-transp.html" title="Accommodation">Accommodation</a></li>
                             <li><a href="starter-page.html" title="Location Maps">Maps</a></li>
@@ -76,8 +75,8 @@
                         </ul>
                     </nav>
                 </div><!--end of side menu column-->
-                <div id="midcol">
-                    <h3>All situated in the beautiful countryside of Bermuda</h3>
+                <div class="data" id="starter-page-midcol">
+                    <h3 class="data" id="starter-page-h3">All situated in the beautiful countryside of Bermuda</h3>
                     <img alt="Devon countryside" height="229" src="images/devon420.jpg" width="419">
                 </div>
                 <br class="clear">
