--- a/starter-page.html
+++ b/starter-page.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <a id="top"></a>
-    <div class="data" id="container">
+    <div class="data" id="starter-page-container">
         <div class="row">
             <div class="col-12">
                 <nav role="navigation" class="data" id="nav">
