--- a/starter-page.html
+++ b/starter-page.html
@@ -31,7 +31,7 @@
     <div class="data" id="starter-page-container">
         <div class="row">
             <div class="col-12">
-                <nav role="navigation" class="data" id="starter-page-nav">
+                <nav role="navigation" id="nav">
                     <input class="trigger" type="checkbox" id="mainNavButton">
                     <label for="mainNavButton" onclick>Menu</label>
                     <ul>
