--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <div class="data" id="#html5style2content">
                 <div class="row">
                     <div class="col-12">
-                        <img src="img/kite.png">
+                        <img src="CSS/images/kite-2.jpg">
                         <p id="disclaimer">
                             Disclaimer! This service is not intended for the those with criminal intent. Celebrities are
                             kind of like people so their privacy should be respected.
