--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
                     </p>
                     <div class="row">
                         <div class="col-12">
-                            <img src="img/kite.png">
+                            <img src="CSS/images/kite_3.jpg">
 							<!-- <h2>Award winning accommodation, self catering or bed and breakfast</h2> 
                             <div class="data" id="html5-style-2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
