--- a/about.html
+++ b/about.html
@@ -423,7 +423,7 @@
                     </div>
                     <div class="row">
                         <div class="çol-12">
-                            <img src="img/kite.png">
+                            <img src="CSS/images/kite_4.jpg">
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
                                 <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10206409624177438.jpg" width="300">
