--- a/membership.html
+++ b/membership.html
@@ -111,7 +111,7 @@
             <div class="data" id="#html5style2content">
                 <div class="row">
                     <div class="col-12">
-                        <img src="img/kite.png">
+                        <img src="CSS/images/kite_4.jpg">
                         <p id="disclaimer">
                             Disclaimer! This service is not intended for the those with criminal intent. Celebrities are
                             kind of like people so their privacy should be respected.
@@ -177,7 +177,7 @@
                 </p>
                 <div class="row">
                         <div class="col-12">
-                            <img src="img/kite.png">
+                            <img src="CSS/images/kite_5.jpg">
 							<!-- <h2>Award winning accommodation, self catering or bed and breakfast</h2> 
                             <div class="data" id="html5-style-2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
