--- a/membership.html
+++ b/membership.html
@@ -521,7 +521,7 @@
                     </div>
                     <div class="row">
                         <div class="çol-12">
-                            <img src="img/kite.png">
+                            <img src="CSS/images/kite_6.jpg">
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
                                 <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg"
