--- a/membership.html
+++ b/membership.html
@@ -758,7 +758,7 @@
                     </div>
                     <div class="row">
                         <div class="çol-12">
-                            <img src="img/kite.png">
+                            <img src="CSS/images/kite_7.jpg">
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
                                 <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-33.jpg" width="300">
