--- a/about.html
+++ b/about.html
@@ -824,7 +824,7 @@
                         <p>&nbsp;</p>
                         <div class="row">
                             <div class="col-12">
-                                <img src="img/kite.png">
+                                <img src="CSS/images/kite-8.jpg">
                                 <h2>Welcome!</h2>
                             </div>
                         </div>
@@ -1265,7 +1265,7 @@
                     </div>
                     <div class="row">
                         <div class="çol-12">
-                            <img src="img/kite.png">
+                            <img src="CSS/images/kite-9.jpg">
                             <div class="data" id="html5style2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
                                 <img alt="Cottage interior" title="Cottage interior" height="225" src="images/10216813367664523.jpg"
@@ -1818,7 +1818,7 @@
 
                 <div class="row">
                     <div class="çol-12">
-                        <img src="img/kite.png">
+                        <img src="CSS/images/kite-10.jpg">>
                     </div>
                 </div><!-- end-.row -->
 
