--- a/about.html
+++ b/about.html
@@ -2092,7 +2092,7 @@
 
         <div class="row">
             <div class="çol-12">
-                <img src="img/kite.png" ;>
+                <img src="CSS/images/kite-11.jpg">
             </div>
         </div><!-- end-.row -->
 
@@ -2387,7 +2387,7 @@
 
     <div class="row">
         <div class="col-12">
-            <img src="images/kite.png" width="95%" ;>
+            <img src="CSS/images/kite-12.jpg">
         </div><!-- end col-12 -->
 	</div>
         <div class="ui-body ui-body-e">
