--- a/news.html
+++ b/news.html
@@ -106,7 +106,7 @@
             <div class="data" id="#html5style2content">
                 <div class="row">
                     <div class="col-12">
-                        <img src="img/kite.png">
+                        <img src="CSS/images/kite-10.jpg">
                         <p id="disclaimer">
                             Disclaimer! This service is not intended for the those with criminal intent. Celebrities are
                             kind of like people so their privacy should be respected.
@@ -156,7 +156,7 @@
             <div class="data" id="#html5style2content">
                 <div class="row">
                     <div class="col-12">
-                        <img src="img/kite.png">
+                        <img src="CSS/images/kite-11.jpg">
                         <p id="disclaimer">
                             Disclaimer! This service is not intended for the those with criminal intent. Celebrities are
                             kind of like people so their privacy should be respected.
@@ -262,7 +262,7 @@
                 </p>
                 <div class="row">
                         <div class="col-12">
-                            <img src="img/kite.png">
+                            <img src="CSS/images/kite-12.jpg">
 							<!-- <h2>Award winning accommodation, self catering or bed and breakfast</h2> 
                             <div class="data" id="html5-style-2leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
@@ -730,7 +730,7 @@
 
           <div class="row">
               <div class="çol-12">
-                  <img src="img/kite.png" ;>
+                  <img src="CSS/images/kite-2.jpg">
               </div>
           </div><!-- end-.row -->
             
@@ -1193,7 +1193,7 @@
                 </div> <!-- end right-col -->
                 <div class="row">
                     <div class="col-12">
-                        <img src="images/kite.png" width="95%" ;>
+                        <img src="CSS/images/kite-3.jpg">
                     </div><!-- end col-12 -->
                     <div id="midcol">
                         <div id="gallery-block">
