--- a/index.html
+++ b/index.html
@@ -1636,10 +1636,11 @@
         <a href="https://orris0.github.io/orris0/gallery-page-validated.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
     </body><!-- end body  -->
 </html>
-</div> <!-- end container -->
+<!--
+</div> -- end container --
 <br class="clear">
 
-    <!--
+    --
     <footer class="data" id="html5style2footer">
         <div class="footer-inner">
             <div class="company-details">
