--- a/starter-page.html
+++ b/starter-page.html
@@ -187,13 +187,14 @@
                         </div>
                     </div>
                 </div><!-- end col-12 -->
-            </div><!-- end .row -->
+            </div><!-- end .row --
     
             <div id="footer">
                 <p>
                     &copy; Copyright 2010 CelebriTracker Productions
                 </p>
             </div>
+        -->
             <div id="container">
                 <p>&nbsp;</p>
                 <p>Tour Orris (default)</p>
