--- a/starter-page.html
+++ b/starter-page.html
@@ -226,7 +226,7 @@
                     <p>&copy; Kite-It.</p>
                 </div>
         </footer>
-        <a href="https://orris0.github.io/orris0/gallery-page-validated.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+        <a href="https://orris0.github.io/orris0/starter-page.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
     </body><!-- end body  -->
 </html>
             
