--- a/starter-page.html
+++ b/starter-page.html
@@ -873,7 +873,7 @@ http://join.zoompanel.com/zoompanel/?master_id=153&subsource_id=111111111&cmp=AF
             <script src="lib/jquery-1.8.17.custom.min.js" type="text/javascript"></script>
 
             <!-- Vendor JS Files -->
-            <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
             <script src="../orris0/aos.css"></script>
             <script src="../orris0/bootstrap.bundle.min.js"></script>
             <script src="../orris0/glightbox.min.js"></script>
