--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@
                     <label for="mainNavButton" onclick>Menu</label>
                     <ul>
                         <li><a href="./index.html">Home</a></li>
-                        <li><a href="./index[1].html">About Us</a></li>
-                        <li><a href="./membership.html">Products</a></li>
-                        <li><a href="./news.html">Blog</a></li>
-                        <li><a href="./starter-page.html">Specials</a></li>
-                        <li><a href="./welcome.html">Contact</a></li>
+                        <li><a href="background-ex7-transp.html">About Us</a></li>
+                        <li><a href="starter-page.html">Products</a></li>
+                        <li><a href="gallery-page-validated.html">Blog</a></li>
+                        <li><a href="gallery-one-col.html">Specials</a></li>
+                        <li><a href="gallery-2col.html">Contact</a></li>
                     </ul>
                 </nav>
             </div><!-- col-12 -->
