--- a/Practical HTML5 Projects/Code01/HTML5-Ch1-7.html
+++ b/Practical HTML5 Projects/Code01/HTML5-Ch1-7.html
@@ -77,10 +77,10 @@
 </head>
 
 <body>
-    <div id="container">
+    <div class="data" id="container">
         <div class="row">
             <div class="col-12">
-                <nav role="navigation" id="nav">
+                <nav role="navigation" class="data" id="nav">
                     <input class="trigger" type="checkbox" id="mainNavButton">
                     <label for="mainNavButton" onclick>Menu</label>
                     <ul>
@@ -94,11 +94,11 @@
                 </nav>
             </div><!-- col-12 -->
         </div><!-- end-.row -->
-        <header>
+        <header class="data" id="Ch1-7header">
             <h1>Tourorris&#39;s Rural Retreats</h1>
             <img id="rosette" alt="Rosette" title="Rosette" height="127" src="images/rosette-128.png" width="128">
         </header>
-        <div id="content">
+        <div class="data" id="Ch1-7content">
             <h2>Award winning accommodation, self catering or bed and breakfast</h2>
             <div id="leftcol">
                 <h3>Cottages, converted barns, caravans</h3>
