--- a/Practical HTML5 Projects/Code01/html5-nav.html
+++ b/Practical HTML5 Projects/Code01/html5-nav.html
@@ -151,18 +151,19 @@
         <text x="20" y="50"
             style="font-family:times new roman; font-size:36pt; font-weight:bold; letter-spacing:20px; stroke:black; fill:white; ">
             Tour Orris</text>
+
     </svg>
 
-	<div id="container">
+	<div class="data" id="html5-nav">
 
-		<header>
+		<header class="data" id="html5-header">
 			<!-- <h1> SVG </h1> -->
 			<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
 				<circle cx="100" cy="50" r="40" stroke="black" stroke-width="2" fill="blue">
 			</svg>
 			<h1>header goes here</h1>
 		</header>
-		<nav>
+		<nav class="data" id="html5-navnav">
 			<ul>
 				<li><a href="#" title="Page 2">Page Two</a></li>
 				<li>
@@ -176,7 +177,7 @@
 						Home Page</a></li>
 			</ul>
 		</nav>
-		<div id="content">
+		<div class="data" id="html5-navcontent">
 			<!-- aside -->
 			<section>
 				<h1>Which browser should you design for?</h1>
@@ -235,7 +236,7 @@
 		</div>
 	</div>
 	<!-- <strong>Footer goes here</strong> -->
-	<footer>		
+	<footer class="data" id="html5-navfooter">		
 		<!-- note that we're programmatically forcing validation and then preventing the form from actually submitting...this is only a test form, and there's no point having it submit to itself for no reason -->
 
 		<!-- <h1>HTML5 forms example</h1> -->
