--- a/Practical HTML5 Projects/Code01/HTML5-Ch1-7.html
+++ b/Practical HTML5 Projects/Code01/HTML5-Ch1-7.html
@@ -18,7 +18,7 @@
     <meta name="author" content="Orris Baker">
     <meta property="og:audio:type" content="audio/mpeg">
 
-    <link rel="stylesheet" href="CSS/transparent.css" type="text/css" media="screen" charset="utf-8"> 
+    <!-- <link rel="stylesheet" href="CSS/transparent.css" type="text/css" media="screen" charset="utf-8"> -->
     <link rel="stylesheet" type="text/css" href="CSS/HTML5-style-2.css">
     <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src=" scripts.js"></script>
