--- a/Practical HTML5 Projects/Code01/HTML5-Ch1-7.html
+++ b/Practical HTML5 Projects/Code01/HTML5-Ch1-7.html
@@ -77,7 +77,7 @@
     <div class="data" id="html5style2container">
         <div class="row">
             <div class="col-12">
-                <nav role="navigation" class="data" id="nav">
+                <nav role="navigation" class="data" id="topnav">
                     <input class="trigger" type="checkbox" id="mainNavButton">
                     <label for="mainNavButton" onclick>Menu</label>
                     <ul>
