--- a/Practical HTML5 Projects/Code01/HTML5-Ch1-7.html
+++ b/Practical HTML5 Projects/Code01/HTML5-Ch1-7.html
@@ -86,7 +86,7 @@
                         <li><a href="./membership.html">Products</a></li>
                         <li><a href="./news.html">Blog</a></li>
                         <li><a href="./starter-page.html">Specials</a></li>
-                        <li><a href="https://atvhfs.com">Contact</a></li>
+                        <li><a href="/Practical HTML5 Projects/Code01/HTML5-Ch1-7.html">Contact</a></li>
                     </ul>
                 </nav>
             </div><!-- col-12 -->
