--- a/Practical HTML5 Projects/Code01/HTML5-Ch1-7.html
+++ b/Practical HTML5 Projects/Code01/HTML5-Ch1-7.html
@@ -20,7 +20,7 @@
 
     <!-- <link rel="stylesheet" href="CSS/transparent.css" type="text/css" media="screen" charset="utf-8"> -->
     <link rel="stylesheet" type="text/css" href="HTML5-style-2.css">
-    <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <!-- <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src=" scripts.js"></script>
     <script src="js/jquery.mobile-1.0.1.min.js"></script>
     <script type="text/javascript" src="assets/js/ui.js"></script>
@@ -34,7 +34,7 @@
 
    <!-- <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet"> -->
     <script src rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
+   <!-- <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./style[1].css">
 
