--- a/Practical HTML5 Projects/Code01/HTML5-Ch1-7.html
+++ b/Practical HTML5 Projects/Code01/HTML5-Ch1-7.html
@@ -62,10 +62,10 @@
     <link rel="author" type="text/html" href="https://orris0.github.io/">
     <!-- Bootstrap Icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <!-- SimpleLightbox plugin CSS-->
+    <!-- SimpleLightbox plugin CSS--
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
+    <!-- Core theme CSS (includes Bootstrap)--
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" /> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Test page for semantic tags </title>
     <!--Add conditional Javascript-->
