--- a/Practical HTML5 Projects/Code01/HTML5-Ch1-7.html
+++ b/Practical HTML5 Projects/Code01/HTML5-Ch1-7.html
@@ -727,7 +727,7 @@ http://join.zoompanel.com/zoompanel/?master_id=153&subsource_id=111111111&cmp=AF
         </footer>
         <script src="lib/jquery-1.8.17.custom.min.js" type="text/javascript"></script>
 
-        <!-- Vendor JS Files -->
+        <!-- Vendor JS Files --
         <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script src="../orris0/aos.css"></script>
         <script src="../orris0/bootstrap.bundle.min.js"></script>
@@ -735,7 +735,7 @@ http://join.zoompanel.com/zoompanel/?master_id=153&subsource_id=111111111&cmp=AF
         <script src="../orris0/isotope.pkgd.min.js"></script>
         <script src="../orris0/swiper-bundle.min.js"></script>
         <script src="../orris0/validate.js"></script>
-        <!--jQuery JS-->
+        <!--jQuery JS--
         <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8" />
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="./js/scripts.js"></script>
