--- a/watermark.html
+++ b/watermark.html
@@ -23,9 +23,8 @@
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
     <style type="text/css">
-        #container { text-align:center; width:600px; height:500px; background-image: url("images/cheqflags.jpg"); background-attachment: fixed 
-                }
-        </style>
+        #container { text-align:center; width:600px; height:500px; background-image: url("images/cheqflags.jpg"); background-attachment: fixed            }
+    </style>
     <!--Add conditional Javascript-->
     <!--[if lte IE 8]>
 		<script src="html5.js"></script>
