--- a/video-tag.html
+++ b/video-tag.html
@@ -1,19 +1,10 @@
-<!DOCTYPE html>
-<!--Everything you write should be using markups -->
-<!-- head section is communicating about the page to the browser -->
-<!-- Anything you write under head is not displayed on the browser content page. -->
+<!doctype html>
 <html ng-app lang="en">
-    <!-- All the Tags should be under <html> -->
-    <!-- Describing about the page -->
-    <head>
-        <!-- Required meta tags -->
-        <!-- Describing about the page -->
-        <!-- head section is communicating about the page to the browser -->
-        <!-- Anything you write under head is not displayed on the browser content page. -->
-        <meta charset="UTF-8">
-        <title>Using the new HTML5 video tag</title>
+<head>
+        
+    <title>Using the new HTML5 video tag</title>
         <!-- Viewport for responsive web design -->
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
         <meta property="og:title" content="A Basic HTML5 Template">
         <meta property="og:type" content="website">
