--- a/video-tag-and-vimeo.html
+++ b/video-tag-and-vimeo.html
@@ -6,54 +6,42 @@
     <!-- All the Tags should be under <html> -->
     <!-- Describing about the page -->
     <head>
-        <!-- Required meta tags -->
-        <!-- Describing about the page -->
-        <!-- head section is communicating about the page to the browser -->
-        <!-- Anything you write under head is not displayed on the browser content page. -->
-        <meta charset="UTF-8">
+        
         <title>HTML5 video tag with Vimeo fallback code</title>
-        <!-- Viewport for responsive web design -->
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+		
+	    <link rel="stylesheet" href="CSS/base.css" type="text/css" media="screen" charset="utf-8" />
+        <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="./scripts.js"></script>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
         <meta property="og:title" content="A Basic HTML5 Template">
         <meta property="og:type" content="website">
-        <meta property="og:description" content="A simple HTML5 Template for new projects.">
+        <meta property="og:audio:type" content="audio/mpeg">
+        <meta property="og:description" content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
         <meta property="og:image" content="image.png">
         <meta name="keywords" content="HTML5, Node.js, Jquery">
         <meta name="author" content="Orris Baker">
-		
-		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
-		<!-- <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8"> -->
-        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="./script.js"></script> 
-        <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
-        <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
-		<link rel="stylesheet" href="./style.css"> 
-        <link rel="stylesheet" href="./style[1].css"> 
-        <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
-	   
-        <link rel="stylesheet" href="./nav[1].css">
-        <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-        <link rel="stylesheet" href="./font-awesome.min[1].css">
-		<link rel="icon" type="image/png" href="./weed.jpg">
-		<link rel="icon" type="image/png" href="./flexy-logo.png">
-
-<style type="text/css">
-body { text-align: center; font-family:Arial; font-size:100%; font-weight:bold;
-}
-</style>
-</head>
-<body><br><p>html5 video tag with vimeo fallback</p>
-<video width="400" height="300" controls="controls">
-<source src=" video/butterfly-movie.mp4" type="video/mp4">
-<source src=" video/butterfly-movie.webm" type="video/webm">
-<source src=" video/butterfly-movie.ogv" type="video/ogg">
-<iframe src="http://player.vimeo.com/video/33108823?title=0&amp;byline=0&amp;portrait=0" 
-width="400" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen 
-allowFullScreen></iframe><p><a href="http://vimeo.com/33108823">Butterfly and orange</a> from 
-<a href="http://vimeo.com/user9515105">Fred Bloggs</a> on <a href="http://vimeo.com">
-Vimeo</a></p>
-</video>
-</body>
+        <meta property="og:audio:type" content="audio/mpeg">
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+        <style type="text/css">
+            body { text-align: center; font-family:Arial; font-size:100%; font-weight:bold;
+            }
+        </style>
+        <!--Add conditional Javascript-->
+        <!--[if lte IE 8]>
+		    <script src="html5.js"></script>
+        <![endif]-->
+    </head>
+    <body><br><p>html5 video tag with vimeo fallback</p>
+        <video width="400" height="300" controls="controls">
+        <source src=" video/butterfly-movie.mp4" type="video/mp4">
+        <source src=" video/butterfly-movie.webm" type="video/webm">
+        <source src=" video/butterfly-movie.ogv" type="video/ogg">
+        <iframe src="http://player.vimeo.com/video/33108823?title=0&amp;byline=0&amp;portrait=0" width="400" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe><p><a href="http://vimeo.com/33108823">Butterfly and orange</a> from 
+        <a href="http://vimeo.com/user9515105">Fred Bloggs</a> on <a href="http://vimeo.com">Vimeo</a></p>
+        </video>
+    </body>
 </html>
