--- a/video-tag-and-vimeo.html
+++ b/video-tag-and-vimeo.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<!--Everything you write should be using markups -->
-<!-- head section is communicating about the page to the browser -->
-<!-- Anything you write under head is not displayed on the browser content page. -->
+<!doctype html>
 <html ng-app lang="en">
-    <!-- All the Tags should be under <html> -->
-    <!-- Describing about the page -->
-    <head>
-        
-        <title>HTML5 video tag with Vimeo fallback code</title>
+<head>
+    <title>HTML5 video tag with Vimeo fallback code</title>
 		
 	    <link rel="stylesheet" href="CSS/base.css" type="text/css" media="screen" charset="utf-8" />
         <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
