--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -35,7 +35,7 @@
    <!-- <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet"> -->
     <script src rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
-    <link rel="stylesheet" href="./style.css">
+    <!-- <link rel="stylesheet" href="./style.css"> -->
     <link rel="stylesheet" href="./style[1].css">
 
     <link rel="stylesheet" href="./nav[1].css">
