--- a/index.html
+++ b/index.html
@@ -230,6 +230,28 @@
         <![endif]-->
 </head>
 <body>
+<div id="container">
+<header>
+ <h1>This is a tab menu</h1>
+</header>
+<nav>
+ <ul>
+ <li><a class="active" href="index.html">Home Page</a></li>
+ <li><a href="page2.html">Page Two</a></li>
+ <li><a href="page3.html">Page Three with a long label</a></li>
+ <li><a href="page4.html">Page Four</a></li>
+ <li><a href="page5.html">Page Five</a></li>
+ </ul>
+</nav>
+<div id="content">
+<b>This is the home page</b>
+<p><img title="Koala" alt="Koala" height="165" src="images/Koalasmall.jpg"
+width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+</div></div>
+</body>
+</html>
+<!--
+<body>
     <div class="data" id="container">
         <div class="row">
             <div class="col-12">
