--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
 		<link rel="stylesheet" type="text/css" href="CSS/css/index-973f48a9b2be581a2212ac40e39a92258a3d10ae46dc49036c6a35.css"> 
 		<link href="CSS/css/headers.css" rel="stylesheet"> -->
         <link rel="stylesheet" href="CSS/squaretabs.css" type="text/css" media="screen" charset="utf-8" /> -->
+        <link href="./Practical HTML5 Projects/Code01/gallery-ie7.css" rel="stylesheet">
+        <link href="./Practical HTML5 Projects/Code01/gallery-2col.css" rel="stylesheet">
+        <link href="./Practical HTML5 Projects/Code01/equal-2d.css" rel="stylesheet">
+        <link href="./Practical HTML5 Projects/Code02/gallery-3col-mix.html.css" rel="stylesheet">
+        <link href="./Practical HTML5 Projects/Code02/gallery-one-col.css" rel="stylesheet">
+        <link href="./Practical HTML5 Projects/Code02/gallery-page-HTML5.css" rel="stylesheet">
         <!-- lightbox -->
         <link rel="stylesheet" href="CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
 		<!-- <link rel="stylesheet" href="CSS/transparent.css" type="text/css" media="screen" charset="utf-8">
