--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 <h1 id="html5style2h1">StarTrackr!</h1>
             </header>
             <br class="clear">
-            <nav>
+             <div id="hnav">
                 <ul>
                     <li><a class="active" href="index.html">Home Page</a></li>
                     <li><a href="page2.html">Page Two</a></li>
@@ -249,7 +249,7 @@
                     <li><a href="page4.html">Page Four</a></li>
                     <li><a href="page5.html">Page Five</a></li>
                 </ul>
-            </nav>
+            </div>
             <div class="data" id="#html5style2content">
                 <b>Practical HTML5 Projects for fun and Profit!</b>
                 <p><img title="Koala" alt="Koala" height="165" src="images/Koalasmall.jpg" width="220"></p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
