--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
 		<link rel="stylesheet" type="text/css" href="CSS/css/index-973f48a9b2be581a2212ac40e39a92258a3d10ae46dc49036c6a35.css"> 
 		<link href="CSS/css/headers.css" rel="stylesheet"> -->
         
-        <link href="CSS/gallery-ie7.css" rel="stylesheet">
-        <link href="CSS/gallery-2col.css" rel="stylesheet">
-        <link href="CSS/equal-2d.css" rel="stylesheet">
-        <link href="CSS/gallery-3col-mix.html.css" rel="stylesheet">
-        <link href="CSS/gallery-one-col.css" rel="stylesheet">
-        <link href="CSS/gallery-page-HTML5.css" rel="stylesheet">
+        <link href="./CSS/gallery-ie7.css" rel="stylesheet">
+        <link href="./CSS/gallery-2col.css" rel="stylesheet">
+        <link href="./CSS/equal-2d.css" rel="stylesheet">
+        <link href="./CSS/gallery-3col-mix.css" rel="stylesheet">
+        <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
         <!-- lightbox -->
         <link rel="stylesheet" href="CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
 		<!-- <link rel="stylesheet" href="CSS/transparent.css" type="text/css" media="screen" charset="utf-8">
