--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <head>
         <link rel="stylesheet" href="CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" type="text/css" href="./CSS/turquoise.css">
-        <link rel="stylesheet" href="CSS/squaretabs.css" type="text/css" media="screen" charset="utf-8" /> -->
+        <link rel="stylesheet" href="./CSS/squaretabs.css" type="text/css" media="screen" charset="utf-8" /> -->
         
         <meta charset="utf-8">
         <!-- Use the .htaccess and remove these lines to avoid edge case issues.
