--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -7,6 +7,7 @@
     
 	<script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     $(document).ready(function() {
+        $('body').append('<header> </header>');
 
     });
     <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
