--- a/gallery-page- validated.html
+++ b/gallery-page- validated.html
@@ -1,10 +1,43 @@
-<!-- Listing 2-6a. Creating a Three Column Rollover Gallery with HTML5 Validation Logo (gallery-page-validated.html) -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My jQuery Project</title>
+    <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Include jQuery library from a CDN or local file -->
+    <script src="https://code.jquery.com"></script>
+</head>
+<body>
+
+    <header>
+        <h1>Project Title</h1>
+        <nav>
+            <!-- Navigation links -->
+        </nav>
+    </header>
+
+    <main>
+        <!-- Project content goes here -->
+    </main>
+
+    <footer>
+        <!-- Footer content -->
+    </footer>
+
+    <!-- Link to your custom JavaScript/jQuery file -->
+    <script src="js/script.js"></script>
+</body>
+</html>
+
+<!-- Listing 2-6a. Creating a Three Column Rollover Gallery with HTML5 Validation Logo (gallery-page-validated.html) --
 <!doctype html>
 <html ng-app lang="en">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <!-- meta details go here -->
+    <!-- meta details go here --
     <title>Complete Gallery page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,30 +58,30 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <link rel="icon" type="image/png" href="./flexy-logo.png">
     <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css”>
-    <!-- Font Awesome Icons -->
+    <!-- Font Awesome Icons --
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <!-- Google Fonts -->
+    <!-- Google Fonts --
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic'
         rel='stylesheet' type='text/css'>
-    <!-- Plugin CSS -->
+    <!-- Plugin CSS --
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
     <!--Add conditional Javascript-->
-    <!-- Favicon-->
+    <!-- Favicon--
     <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
     <link rel="alternate" type="application/pdf" href="MainPage.pdf">
     <link rel="author" href="mailto:bakerorris0@gmail.comcom">
-    <!-- Bootstrap Icons-->
+    <!-- Bootstrap Icons--
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- SimpleLightbox plugin CSS-->
+    <!-- SimpleLightbox plugin CSS--
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet">
-    <!-- Core theme CSS (includes Bootstrap)-->
+    <!-- Core theme CSS (includes Bootstrap)--
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--conditional Javascript added-->
     <!--[if lte IE 8]>
         <script src="html5.js"></script>
-    <![endif]-->
+    <![endif]--
 </head>
 <body>
     <header>
@@ -93,10 +126,10 @@
                 <li><a href="#"><img src="images/ancientthumb.jpg" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="images/ancientbig.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/felixthumb.jpg" alt="Felix" title="Felix"><img class="hid" src="images/felixbig.jpg" alt=""></a></li>
                 <li><a href="#"><img src="images/cliffthumb.jpg" alt="Cliffs" title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
-                <!-- CHAPTER 2 ■ A ROLLOVER PICTURE GALLERY 51 -->
+                <!-- CHAPTER 2 ■ A ROLLOVER PICTURE GALLERY 51 --
             </ul><br class="clear">
-        </div><!--gallery block closed-->
-    </div><!--midcol closed-->
+        </div><!--gallery block closed--
+    </div><!--midcol closed--
     <footer class="data" id="html5style2footer">
             <div class="footer-inner">
                 <div class="company-details">
@@ -203,8 +236,8 @@
 
                         </div>
                     </div>
-                </div><!-- end col-12 -->
-            </div><!-- end .row -->
+                </div><!-- end col-12 --
+            </div><!-- end .row --
     
             <div id="footer">
                 <p>
@@ -220,7 +253,7 @@
         </footer>
         <script src="lib/jquery-1.8.17.custom.min.js" type="text/javascript"></script>
 
-        <!-- Vendor JS Files -->
+        <!-- Vendor JS Files --
         <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script src="../orris0/aos.css"></script>
         <script src="../orris0/bootstrap.bundle.min.js"></script>
@@ -228,7 +261,7 @@
         <script src="../orris0/isotope.pkgd.min.js"></script>
         <script src="../orris0/swiper-bundle.min.js"></script>
         <script src="../orris0/validate.js"></script>
-        <!--jQuery JS-->
+        <!--jQuery JS--
         <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8" />
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="./js/scripts.js"></script>
@@ -242,10 +275,10 @@
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
         <script src="jquery.innerfade.js" type="text/javascript"></script>
         <script src="jquery.cycle.all.min.js" type="text/javascript"></script>
-        <!-- Template Main JS File -->
+        <!-- Template Main JS File --
         <script src="../orris0/main.js"></script>
         <a href="https://orris0.github.io/orris0/membership.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-    </body><!-- end body  -->
+    </body><!-- end body  --
 </html>
 
 	<!--
